# Experiment-Calculator

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  streamlit_main.py
.github/workflows/: tests.yml
calculator_types/: power_calculator.md  significance_calculator.md  srm_calculator.md
experiment_calculator/: streamlit_main.py
experiment_calculator/core/: calculations.py  types.py  validation.py
experiment_calculator/pages/: __init__.py  power.py  significance.py  srm_test.py
experiment_calculator/ui/: components.py  plots.py
experiment_calculator/utils/: calculation.py  plot.py  ui.py
tests/: conftest.py
tests/integration/: test_cross_validation.py  test_numerical_stability.py  test_power_calculator_flows.py  test_significance_calculator_flows.py  test_srm_flows.py
tests/unit/: test_calculations.py  test_validation.py
