[project]
name = "experiment-calculator"
version = "0.1.0"
description = ""
authors = [
    {name = "Ashley Anderson",email = "ashley.r.anderson@outlook.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "statsmodels (>=0.14.4,<0.15.0)",
    "streamlit (>=1.52.0,<2.0.0)",
    "plotly (>=6.0.0,<7.0.0)",
    "watchdog (>=6.0.0,<7.0.0)",
    "streamlit-community-navigation-bar (>=4.7.11,<5.0.0)",
    "pytest (>=9.0.2,<10.0.0)"
]

[tool.poetry]
packages = [{include = "experiment_calculator", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
